--- a/stylesheet.css
+++ b/stylesheet.css
@@ -33,6 +33,17 @@ body {
 .buttons .conf #changeColor {
   color: lightpink;
 }
+.buttons #timer {
+  width: 100%;
+  height: 60px;
+  border: 2px solid dimgray;
+  box-sizing: border-box;
+  background-color: lightcyan;
+  font-size: 24px;
+  line-height: 60px;
+  text-align: center;
+  display: none;
+}
 .buttons #start {
   width: 100%;
   height: 60px;
@@ -202,10 +213,25 @@ body {
   box-shadow: 0 16px white;
 }
 
-.text {
+.howTow {
   width: 300px;
-  margin: 0 auto;
+  height: 60px;
+  display: block;
+  margin: 16px auto 0;
+  background-color: lightcyan;
+  font-size: 24px;
+}
+
+.text {
+  position: fixed;
+  bottom: 0;
+  width: 300px;
+  display: none;
 }
 .text span {
   font-size: 24px;
+}
+
+.text.active {
+  display: block;
 }
